@@ -1,0 +1,7 @@
+# ----------------------------------------------------- 
+# Animations
+# name "Default"
+# ----------------------------------------------------- 
+animations {
+    enabled = false
+}
