@@ -35,3 +35,4 @@ env = APPIMAGELAUNCHER_DISABLE,1
 exec-once = ~/dotfiles/hypr/scripts/ml4w-welcome-autostart.sh
 exec-once = ~/.config/ml4w-hyprland-settings/hyprctl.sh
 exec-once = ~/dotfiles/hypr/scripts/eww.sh
+exec-once = ~/dotfiles/hypr/scripts/toggle-animations.sh
